Revise about.html with updated content and metadata
Updated the 'About Me' section with new content and improved SEO metadata.

--- a/about.html
+++ b/about.html
@@ -1,119 +1,197 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricardo Melo | Guia Prático da Assessoria Jurídica e Tecnologia</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <meta name="description" content="Guia prático da assessoria jurídica, tecnologia, perfil profissional e livro de Ricardo Melo.">
-    <meta name="keywords" content="Ricardo Melo, livro jurídico, assessoria jurídica, tecnologia, perfil, Cork, Brasil, Tribunal de Justiça">
-    <meta name="author" content="Ricardo Melo">
-  </head>
-  <body>
-    <section class="about-section py-5 mt-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-5 mb-4 mb-lg-0 text-center">
-            <div class="profile-pic-lg mx-auto shadow-lg">
-              <img
-                src="img/sobre1.png"
-                alt="Ricardo Melo"
-                class="img-fluid rounded-circle border border-4 border-royal"
-              />
-            </div>
-          </div>
-          <div class="col-lg-7">
-            <h2 class="fw-bold mb-3 text-royal">About Me</h2>
-            <p>
-              Hello, I'm Ricardo Alves Melo, a technology enthusiast with a
-              passion for continuous learning. I’m currently improving my
-              English at Icot College and deepening my knowledge in Systems
-              Analysis and Development, focusing on front-end development as I
-              pursue a career transition into tech. My professional journey has
-              been diverse and enriching. Over the years, I’ve worked as a
-              salesperson, sales representative, and store manager in
-              construction materials and agricultural products. I also practiced
-              law and served in the public sector, working as an advisor and
-              judge assistant at the Brazilian Court of Justice. Today, my path
-              has led me to Ireland, where I work in customer service in Cork, a
-              vibrant city that has become my home.
-            </p>
-            <p>
-              <strong>My Interests</strong> <br />
-              Beyond technology, I have a deep love for outdoor activities and
-              sports that challenge me. Weight training, rappelling,
-              sandboarding, snowboarding, and surfing are part of my lifestyle.
-              I also enjoy exploring new cultures, visiting historical sites,
-              and traveling to new destinations. My journey has already taken me
-              to incredible places like Norway, Sweden, Scotland, and now, I'm
-              experiencing life in Cork, Ireland. Whether in the pursuit of new
-              professional challenges or exploring the world around me, I'm
-              always moving forward, learning, and evolving.
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ricardo Melo | About Me | Legal Assistant Cork</title>
+  <meta name="description" content="About Ricardo Melo – Legal Assistant and Legal Secretary based in Cork. 11+ years of judicial experience supporting judges, case management, legal documentation, and court procedures." />
+  <meta name="keywords" content="Ricardo Melo, Legal Assistant Cork, Legal Secretary Cork, Law Firm Assistant Ireland, Judicial Experience, Case Management, Legal Support" />
+  <meta name="author" content="Ricardo Melo" />
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
+
+<body>
+
+<!-- HERO SECTION -->
+<section class="hero-section py-5 d-flex align-items-center bg-light">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-4 text-center mb-4 mb-md-0">
+        <img src="img/fotoperfil.png"
+             alt="Ricardo Melo – Legal Assistant Cork"
+             class="img-fluid rounded-circle shadow"
+             style="max-width: 220px;">
+      </div>
+      <div class="col-md-8">
+        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+        <h2 class="h5 text-muted mb-3">
+          Legal Assistant & Legal Secretary | Cork, Ireland
+        </h2>
+        <p class="lead">
+          Brazilian-qualified lawyer with extensive judicial experience. Over <strong>11 years supporting judges, case management, legal documentation, and procedural compliance</strong>. Highly organized, detail-oriented, and committed to excellence in legal environments.
+        </p>
+        <div class="mt-4">
+          <a href="index.html" class="btn btn-dark me-2">Home</a>
+          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- PROFESSIONAL SUMMARY -->
+<section class="py-5">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Professional Summary</h3>
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <p>
+          Brazilian lawyer with over 11 years of experience in judicial advisory roles, currently based in Cork, Ireland. Skilled in supporting legal teams, managing cases, drafting documents, and ensuring procedural compliance.
+        </p>
+        <p>
+          Adept at assisting solicitors and legal departments efficiently while maintaining confidentiality and high standards. Open to roles as <strong>Legal Assistant</strong> or <strong>Legal Secretary</strong>.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- LEGAL CURRICULUM -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Legal Curriculum</h3>
+
+    <div class="timeline">
+
+      <!-- Deputy Adviser & Assistant Judge -->
+      <div class="timeline-item mb-4">
+        <div class="card shadow-sm border-start border-4 border-dark">
+          <div class="card-body">
+            <h5 class="fw-bold mb-1">Deputy Adviser & Assistant Judge</h5>
+            <h6 class="text-muted mb-2">Brazilian Court of Justice | 2013 - 2024</h6>
+            <p class="mb-0">
+              Provided legal advisory to judges, managed complex case files, drafted decisions, and ensured procedural compliance. Led teams in legal analysis and documentation, gaining 11 years of comprehensive judicial experience.
             </p>
           </div>
         </div>
       </div>
-    </section>
- <footer
-      class="footer-section pt-4 pb-3"
-    >
-      <div class="container">
-        <div class="d-flex flex-column align-items-center">
-          <div class="mb-3 d-flex justify-content-center social-icons">
-            <a
-              href="https://github.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="GitHub"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a
-              href="https://linkedin.com/in/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="LinkedIn"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a
-              href="https://wa.me/55000000000"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="WhatsApp"
-              ><i class="fab fa-whatsapp"></i
-            ></a>
-            <a
-              href="https://instagram.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              href="mailto:ricardo@exemplo.com"
-              target="_blank"
-              class="fs-3"
-              aria-label="Email"
-              ><i class="fas fa-envelope"></i
-            ></a>
-          </div>
-          <div class="btn-group mb-3">
-            <a href="index.html#profile" class="btn-custom">Profile</a>
-            <a href="livro.html" class="btn-custom">My Book</a>
-          </div>
-          <div class="text-center small text-navy-light mt-2">
-            © 2025 Ricardo Melo. All rights reserved.
+
+      <!-- Lawyer – Private Practice -->
+      <div class="timeline-item mb-4">
+        <div class="card shadow-sm border-start border-4 border-primary">
+          <div class="card-body">
+            <h5 class="fw-bold mb-1">Lawyer – Private Practice</h5>
+            <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
+            <p class="mb-0">
+              Practiced civil law, family law, and legal consulting. Prepared legal documents, represented clients in court, and developed strong analytical and client communication skills.
+            </p>
           </div>
         </div>
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+
+      <!-- Legal Intern -->
+      <div class="timeline-item mb-4">
+        <div class="card shadow-sm border-start border-4 border-success">
+          <div class="card-body">
+            <h5 class="fw-bold mb-1">Legal Intern – Law Office & Legal Advisory</h5>
+            <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
+            <p class="mb-0">
+              Assisted senior lawyers in drafting contracts, case management, and legal research. Gained foundational experience in client relations, document preparation, and procedural guidance.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Administrative & Customer Service -->
+      <div class="timeline-item mb-4">
+        <div class="card shadow-sm border-start border-4 border-warning">
+          <div class="card-body">
+            <h5 class="fw-bold mb-1">Administrative & Customer Service Roles</h5>
+            <h6 class="text-muted mb-2">Cork, Ireland & Brazil | 2007 - 2024</h6>
+            <p class="mb-0">
+              Experience in client communication, office administration, and team coordination, strengthening operational and organizational skills crucial for Legal Assistant and Secretary roles.
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+<!-- INTERESTS & HOBBIES -->
+<section class="py-5">
+  <div class="container">
+    <h3 class="fw-bold mb-4 text-center">Personal Interests</h3>
+    <div class="row justify-content-center">
+      <div class="col-md-10">
+        <p>
+          Beyond law, I enjoy outdoor activities and sports that challenge me: weight training, rappelling, sandboarding, snowboarding, and surfing. I also love exploring new cultures, visiting historical sites, and traveling. My journey has taken me to Norway, Sweden, Scotland, and now Cork, Ireland.
+        </p>
+        <p>
+          Whether pursuing professional challenges or exploring the world, I remain committed to learning, growth, and excellence in every endeavor.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="pt-4 pb-3 border-top">
+  <div class="container text-center">
+
+    <div class="mb-3 d-flex justify-content-center">
+      <a href="https://linkedin.com/in/ricardoadevmelo"
+         target="_blank"
+         aria-label="LinkedIn"
+         class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none"
+         style="width: 44px; height: 44px;">
+        <i class="fab fa-linkedin-in fs-5"></i>
+      </a>
+    </div>
+
+    <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
+      <a href="index.html" class="btn btn-dark">Home</a>
+      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+    </div>
+
+    <small class="text-muted">
+      © 2025 Ricardo Melo — Legal Assistant & Legal Secretary | Cork
+    </small>
+
+  </div>
+</footer>
+
+<!-- TIMELINE CSS -->
+<style>
+.timeline {
+  position: relative;
+  margin-left: 0;
+  padding-left: 0;
+}
+.timeline-item {
+  position: relative;
+  margin-bottom: 2rem;
+}
+.timeline-item::before {
+  content: '';
+  position: absolute;
+  left: 12px;
+  top: 0;
+  bottom: 0;
+  width: 4px;
+  background: #dee2e6;
+  border-radius: 2px;
+}
+.timeline-item .card {
+  margin-left: 32px;
+  border-left: 4px solid;
+}
+</style>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
