Refine professional summary and personal interests
Updated professional experience details and refined personal interests section.

--- a/about.html
+++ b/about.html
@@ -67,59 +67,43 @@
     <div class="timeline">
 
       <!-- Deputy Adviser & Assistant Judge -->
-      <div class="timeline-item mb-4">
-        <div class="card shadow-sm border-start border-4 border-dark">
-          <div class="card-body">
-            <h5 class="fw-bold mb-1">Deputy Adviser & Assistant Judge</h5>
-            <h6 class="text-muted mb-2">Brazilian Court of Justice | 2013 - 2024</h6>
-            <p class="mb-0">
-              Provided legal advisory to judges, managed complex case files, drafted decisions, and ensured procedural compliance. Led teams in legal analysis and documentation, gaining 11 years of comprehensive judicial experience.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Lawyer – Private Practice -->
-      <div class="timeline-item mb-4">
-        <div class="card shadow-sm border-start border-4 border-primary">
-          <div class="card-body">
-            <h5 class="fw-bold mb-1">Lawyer – Private Practice</h5>
-            <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
-            <p class="mb-0">
-              Practiced civil law, family law, and legal consulting. Prepared legal documents, represented clients in court, and developed strong analytical and client communication skills.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Legal Intern -->
-      <div class="timeline-item mb-4">
-        <div class="card shadow-sm border-start border-4 border-success">
-          <div class="card-body">
-            <h5 class="fw-bold mb-1">Legal Intern – Law Office & Legal Advisory</h5>
-            <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
-            <p class="mb-0">
-              Assisted senior lawyers in drafting contracts, case management, and legal research. Gained foundational experience in client relations, document preparation, and procedural guidance.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Administrative & Customer Service -->
-      <div class="timeline-item mb-4">
-        <div class="card shadow-sm border-start border-4 border-warning">
-          <div class="card-body">
-            <h5 class="fw-bold mb-1">Administrative & Customer Service Roles</h5>
-            <h6 class="text-muted mb-2">Cork, Ireland & Brazil | 2007 - 2024</h6>
-            <p class="mb-0">
-              Experience in client communication, office administration, and team coordination, strengthening operational and organizational skills crucial for Legal Assistant and Secretary roles.
-            </p>
-          </div>
-        </div>
-      </div>
-
+<div class="timeline-item mb-4">
+  <div class="card shadow-sm border-start border-4 border-dark">
+    <div class="card-body">
+      <h5 class="fw-bold mb-1">Deputy Adviser & Assistant Judge</h5>
+      <h6 class="text-muted mb-2">Brazilian Court of Justice | 2013 - 2024</h6>
+      <p class="mb-0">
+        Provided legal advisory to judges, acted as conciliator and mediator in judicial hearings, managed complex case files, drafted decisions, and ensured procedural compliance. Led teams in legal analysis and documentation, gaining 11 years of comprehensive judicial experience in civil, family, labor, social security, and criminal law.
+      </p>
     </div>
   </div>
+</div>
+
+<!-- Lawyer – Private Practice -->
+<div class="timeline-item mb-4">
+  <div class="card shadow-sm border-start border-4 border-primary">
+    <div class="card-body">
+      <h5 class="fw-bold mb-1">Lawyer – Private Practice</h5>
+      <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
+      <p class="mb-0">
+        Practiced civil, labor, social security, family, and criminal law, providing legal consulting to clients. Prepared legal documents, drafted petitions, represented clients in court, and developed strong analytical and client communication skills.
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Legal Intern -->
+<div class="timeline-item mb-4">
+  <div class="card shadow-sm border-start border-4 border-success">
+    <div class="card-body">
+      <h5 class="fw-bold mb-1">Legal Intern – Law Office & Legal Advisory</h5>
+      <h6 class="text-muted mb-2">Brazil | 2008 - 2013</h6>
+      <p class="mb-0">
+        Assisted senior lawyers in drafting contracts, managing cases, conducting legal research, and redacting initial judicial petitions. Gained foundational experience in client relations, document preparation, and procedural guidance across civil, labor, social security, family, and criminal law matters.
+      </p>
+    </div>
+  </div>
+</div>
 </section>
 
 <!-- INTERESTS & HOBBIES -->
@@ -195,3 +179,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
