Revise professional summary and legal curriculum
Updated the content of the about.html file to enhance the professional summary and legal curriculum sections, including details about judicial experience and roles.

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <h5 class="fw-bold mb-1">Deputy Adviser & Assistant Judge</h5>
       <h6 class="text-muted mb-2">Brazilian Court of Justice | 2016 - 2024</h6>
       <p class="mb-0">
-        Provided legal advisory to judges, acted as conciliator and mediator in judicial hearings, managed complex case files, drafted decisions, and ensured procedural compliance. Led teams in legal analysis and documentation, gaining 11 years of comprehensive judicial experience in civil, family, labor, social security, and criminal law.
+        Provided legal advisory to judges, acted as conciliator and mediator in judicial hearings, managed complex case files, drafted decisions and sentences, and ensured procedural compliance. Administered and supported judges in the Jury Court, ensured procedural compliance, and led teams in legal analysis and documentation.
       </p>
     </div>
   </div>
@@ -179,5 +179,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
