--- a/livro.html
+++ b/livro.html
@@ -1,158 +1,163 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricardo Melo | Guia Prático da Assessoria Jurídica e Tecnologia</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-    />
-    <meta name="description" content="Guia prático da assessoria jurídica, tecnologia, perfil profissional e livro de Ricardo Melo.">
-    <meta name="keywords" content="Ricardo Melo, livro jurídico, assessoria jurídica, tecnologia, perfil, Cork, Brasil, Tribunal de Justiça">
-    <meta name="author" content="Ricardo Melo">
-  </head>
-  <body>
-    <section class="book-section py-5 mt-5">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-5 mb-4 mb-lg-0 text-center">
-            <img
-              src="img/capa.2jpg.jpg"
-              alt="Capa do livro Guia Prático da Assessoria Jurídica"
-              class="img-fluid rounded shadow-lg"
-              style="max-width: 380px"
-            />
-          </div>
-          <div class="col-lg-7">
-            <h2 class="fw-bold mb-3 text-royal">Meu Livro</h2>
-            <p>
-              <strong>Título: </strong>Guia Prático da Assessoria Jurídica no
-              Tribunal de Justiça Brasileiro<br />
-              </p>
-              <p><strong>Descrição: </strong> Um guia completo e prático para quem
-              deseja atuar na assessoria jurídica dentro do Poder Judiciário.
-              Com modelos, orientações técnicas e dicas de postura profissional,
-              esta obra é ideal para transformar conhecimento teórico em
-              excelência prática.
-            </p>
-            <p><strong>Sobre o conteúdo: </strong>Você está iniciando na assessoria
-            jurídica ou deseja aprimorar sua atuação nos gabinetes do Poder
-            Judiciário? Este guia sem igual é a ferramenta definitiva para
-            transformar teoria em competência prática!<br />
-            </p>
-            <p></p><strong>O que você encontrará:</strong>
-            <ul class="list-unstyled mt-3">
-              <li><i class="fas fa-check text-success"></i> Modelos de peças e
-                documentos</li>
-              <li><i class="fas fa-check text-success"></i> Orientações técnicas
-                para atuação eficiente</li>
-              <li><i class="fas fa-check text-success"></i> Dicas de postura
-                profissional e ética</li>
-              <li><i class="fas fa-check text-success"></i> Exemplos práticos
-                e estudos de caso</li>
-                </p>
-            <hr />
-            <h5 class="mb-3 mt-4">Onde comprar:</h5>
-            <div class="d-flex flex-wrap gap-2 mb-4">
-              <a
-                href="https://www.amazon.com.br/dp/B0FGSX5XJK"
-                class="btn btn-outline-dark btn-platform"
-                target="_blank"
-              >
-                <i class="fab fa-amazon"></i> Amazon
-              </a>
-              <a
-                href="https://go.hotmart.com/G100739217Q"
-                class="btn btn-outline-danger btn-platform"
-                target="_blank"
-              >
-                <i class="fa-solid fa-fire"></i> Hotmart
-              </a>
-              <a
-                href="https://online.fliphtml5.com/gfxmm/zpyd/"
-                class="btn btn-outline-primary btn-platform"
-                target="_blank"
-              >
-                <i class="fa-solid fa-book-open"></i> FlipHTML5
-              </a>
-              <a
-                href="https://loja.uiclap.com/titulo/ua105576/"
-                class="btn btn-outline-success btn-platform"
-                target="_blank"
-              >
-                <i class="fa-solid fa-book"></i> Uiclap
-              </a>
-              <a
-                href="https://clubedeautores.com.br/livro/guia-pratico-da-assessoria-juridica-no-tribunal-de-justica-brasileiro"
-                class="btn btn-outline-secondary btn-platform"
-                target="_blank"
-              >
-                <i class="fa-solid fa-users"></i> Clube dos Autores
-              </a>
-        </div>
-            <div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;"><iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" src="https://online.fliphtml5.com/gfxmm/zpyd/"  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" ></iframe></div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ricardo Melo | Practical Guide to Legal Assistance in the Brazilian Court</title>
+  
+  <meta name="description" content="Practical guide to legal assistance in the judiciary, professional profile, and book by Ricardo Melo.">
+  <meta name="keywords" content="Ricardo Melo, legal book, legal assistance, judiciary, Cork, Brazil, Court of Justice">
+  <meta name="author" content="Ricardo Melo">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+</head>
+<body>
+
+<!-- BOOK SECTION -->
+<section class="book-section py-5 mt-5">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-5 mb-4 mb-lg-0 text-center">
+        <img src="img/capa.2jpg.jpg"
+             alt="Cover of Practical Guide to Legal Assistance"
+             class="img-fluid rounded shadow-lg"
+             style="max-width: 380px" />
       </div>
-    </section>
-    <div>
+      <div class="col-lg-7">
+        <h2 class="fw-bold mb-3 text-royal">My Book</h2>
+        <p><strong>Title: </strong>Practical Guide to Legal Assistance in the Brazilian Court</p>
+        <p><strong>Description: </strong>A comprehensive and practical guide for those wishing to work in legal assistance within the judiciary. Featuring templates, technical guidance, and professional conduct tips, this work is ideal for transforming theoretical knowledge into practical excellence.</p>
+        <p><strong>Content Overview: </strong>Whether you are starting your legal assistance career or aiming to improve your performance in court offices, this unique guide is the definitive tool to turn theory into practical competence.</p>
+        <p><strong>What you will find:</strong></p>
+        <ul class="list-unstyled mt-3">
+          <li><i class="fas fa-check text-success"></i> Templates of legal documents and filings</li>
+          <li><i class="fas fa-check text-success"></i> Technical guidance for efficient practice</li>
+          <li><i class="fas fa-check text-success"></i> Professional conduct and ethics tips</li>
+          <li><i class="fas fa-check text-success"></i> Practical examples and case studies</li>
+        </ul>
+
+        <hr />
+        <h5 class="mb-3 mt-4">Where to Buy:</h5>
+        <div class="d-flex flex-wrap gap-2 mb-4">
+          <a href="https://www.amazon.com.br/dp/B0FGSX5XJK" class="btn btn-outline-dark btn-platform" target="_blank">
+            <i class="fab fa-amazon"></i> Amazon
+          </a>
+          <a href="https://go.hotmart.com/G100739217Q" class="btn btn-outline-danger btn-platform" target="_blank">
+            <i class="fa-solid fa-fire"></i> Hotmart
+          </a>
+          <a href="https://online.fliphtml5.com/gfxmm/zpyd/" class="btn btn-outline-primary btn-platform" target="_blank">
+            <i class="fa-solid fa-book-open"></i> FlipHTML5
+          </a>
+          <a href="https://loja.uiclap.com/titulo/ua105576/" class="btn btn-outline-success btn-platform" target="_blank">
+            <i class="fa-solid fa-book"></i> Uiclap
+          </a>
+          <a href="https://clubedeautores.com.br/livro/guia-pratico-da-assessoria-juridica-no-tribunal-de-justica-brasileiro" class="btn btn-outline-secondary btn-platform" target="_blank">
+            <i class="fa-solid fa-users"></i> Clube dos Autores
+          </a>
+        </div>
+
+        <div style="position:relative;padding-top:max(60%,324px);width:100%;height:0;">
+          <iframe style="position:absolute;border:none;width:100%;height:100%;left:0;top:0;" 
+                  src="https://online.fliphtml5.com/gfxmm/zpyd/"  
+                  seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true">
+          </iframe>
+        </div>
+
+      </div>
     </div>
-    <footer
-      class="footer-section pt-4 pb-3"
-    >
-      <div class="container">
-        <div class="d-flex flex-column align-items-center">
-          <div class="mb-3 d-flex justify-content-center social-icons">
-            <a
-              href="https://github.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="GitHub"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a
-              href="https://linkedin.com/in/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="LinkedIn"
-              ><i class="fab fa-linkedin"></i
-            ></a>
-            <a
-              href="https://wa.me/55000000000"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="WhatsApp"
-              ><i class="fab fa-whatsapp"></i
-            ></a>
-            <a
-              href="https://instagram.com/ricardoadevmelo"
-              target="_blank"
-              class="me-3 fs-3"
-              aria-label="Instagram"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a
-              href="mailto:ricardo@exemplo.com"
-              target="_blank"
-              class="fs-3"
-              aria-label="Email"
-              ><i class="fas fa-envelope"></i
-            ></a>
+  </div>
+</section>
+
+<!-- CONTACT FORM -->
+<section class="py-5 bg-light" id="contact">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
+
+        <h3 class="fw-bold text-center mb-4">Contact Me</h3>
+        <div id="contact-alert" class="alert d-none" role="alert"></div>
+
+        <form id="contact-form" method="POST">
+          
+          <div class="mb-3">
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name" required />
           </div>
-          <div class="btn-group mb-3">
-            <a href="index.html#profile" class="btn-custom">Profile</a>
-            <a href="about.html" class="btn-custom">About</a>
+
+          <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required />
           </div>
-          <div class="text-center small text-navy-light mt-2">
-            © 2025 Ricardo Melo. All rights reserved.
+
+          <div class="mb-3">
+            <label for="subject" class="form-label">Subject</label>
+            <input type="text" class="form-control" id="subject" name="subject" required />
           </div>
-        </div>
+
+          <div class="mb-4">
+            <label for="message" class="form-label">Message</label>
+            <textarea class="form-control" id="message" name="message" rows="5" placeholder="Write your message regarding legal advisory or the book." required></textarea>
+          </div>
+
+          <div class="d-grid">
+            <button type="submit" class="btn btn-dark btn-lg">Send Message</button>
+          </div>
+        </form>
+
       </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="footer-section pt-4 pb-3 border-top">
+  <div class="container text-center">
+
+    <div class="mb-3 d-flex justify-content-center">
+      <a href="https://linkedin.com/in/ricardoadevmelo" target="_blank" 
+         class="d-flex align-items-center justify-content-center border border-dark rounded-3 text-dark text-decoration-none" 
+         style="width: 44px; height: 44px;" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in fs-5"></i>
+      </a>
+    </div>
+
+    <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
+      <a href="index.html#profile" class="btn btn-dark">Professional Profile</a>
+      <a href="about.html" class="btn btn-outline-dark">About Me</a>
+    </div>
+
+    <small class="text-muted">
+      © 2025 Ricardo Melo — Legal Assistant & Legal Secretary | Cork
+    </small>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+  emailjs.init('Bvf8Fx2PsIxme0qEl');
+
+  const form = document.getElementById('contact-form');
+  const alertBox = document.getElementById('contact-alert');
+
+  form.addEventListener('submit', function(event) {
+    event.preventDefault();
+
+    emailjs.sendForm('service_ricardomelo', 'template_1u3itg7', this)
+      .then(() => {
+        alertBox.className = 'alert alert-success';
+        alertBox.textContent = 'Your message has been sent successfully. I will reply shortly.';
+        alertBox.classList.remove('d-none');
+        form.reset();
+      }, (error) => {
+        alertBox.className = 'alert alert-danger';
+        alertBox.textContent = 'Oops! Something went wrong. Please try again or email me directly at ricardoadevmelo@gmail.com';
+        alertBox.classList.remove('d-none');
+        console.error(error);
+      });
+  });
+</script>
+</body>
 </html>
