--- a/livro.html
+++ b/livro.html
@@ -15,8 +15,30 @@
 </head>
 <body>
 
+<!-- HERO SECTION -->
+<section class="hero-section py-5 d-flex align-items-center bg-light">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-12 text-center">
+        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+        <h2 class="h5 text-muted mb-3">Legal Assistant | Cork, Ireland</h2>
+        <p class="lead">
+          Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>, supporting judges and legal teams with case preparation, documentation, procedural compliance, and efficient administrative support.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- NAVIGATION BUTTONS -->
+<div class="container my-4 d-flex justify-content-center gap-2 flex-wrap">
+  <a href="index.html" class="btn btn-outline-primary">Home</a>
+  <a href="index.html#profile" class="btn btn-dark">Professional Profile</a>
+  <a href="about.html" class="btn btn-outline-dark">About Me</a>
+</div>
+
 <!-- BOOK SECTION -->
-<section class="book-section py-5 mt-5">
+<section class="book-section py-5">
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-5 mb-4 mb-lg-0 text-center">
@@ -124,6 +146,7 @@
     </div>
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
+      <a href="index.html" class="btn btn-outline-primary">Home</a>
       <a href="index.html#profile" class="btn btn-dark">Professional Profile</a>
       <a href="about.html" class="btn btn-outline-dark">About Me</a>
     </div>
