--- a/livro.html
+++ b/livro.html
@@ -19,12 +19,24 @@
 <section class="hero-section py-5 d-flex align-items-center bg-light">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-md-12 text-center">
+      <div class="col-md-4 text-center mb-4 mb-md-0">
+        <img src="img/fotoperfil.png"
+             alt="Ricardo Melo – Legal Assistant Cork"
+             class="img-fluid rounded-circle shadow"
+             style="max-width: 220px;">
+      </div>
+      <div class="col-md-8">
         <h1 class="fw-bold mb-2">Ricardo Melo</h1>
-        <h2 class="h5 text-muted mb-3">Legal Assistant | Cork, Ireland</h2>
+        <h2 class="h5 text-muted mb-3">
+          Legal Assistant & Legal Secretary | Cork, Ireland
+        </h2>
         <p class="lead">
-          Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>, supporting judges and legal teams with case preparation, documentation, procedural compliance, and efficient administrative support.
+          Brazilian-qualified lawyer with extensive judicial experience. Over <strong>11 years supporting judges, case management, legal documentation, and procedural compliance</strong>. Highly organized, detail-oriented, and committed to excellence in legal environments.
         </p>
+        <div class="mt-4">
+          <a href="index.html" class="btn btn-dark me-2">Home</a>
+          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+        </div>
       </div>
     </div>
   </div>
@@ -184,3 +196,4 @@
 </script>
 </body>
 </html>
+
