--- a/livro.html
+++ b/livro.html
@@ -35,7 +35,7 @@
         </p>
         <div class="mt-4">
           <a href="index.html" class="btn btn-dark me-2">Home</a>
-          <a href="index.html#profile" class="btn btn-dark">Professional Profile</a>
+          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
         </div>
       </div>
     </div>
@@ -189,5 +189,6 @@
 </script>
 </body>
 </html>
+
 
 
