Fix HTML encoding issues in livro.html

--- a/livro.html
+++ b/livro.html
@@ -151,9 +151,8 @@
     </div>
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
-      <a href="index.html" class="btn btn-outline-primary">Home</a>
-      <a href="index.html#profile" class="btn btn-dark">Professional Profile</a>
-      <a href="about.html" class="btn btn-outline-dark">About Me</a>
+      <a href="index.html" class="btn btn-dark me-2">Home</a>
+      <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
     </div>
 
     <small class="text-muted">
@@ -189,6 +188,7 @@
 </script>
 </body>
 </html>
+
 
 
 
