--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </p>
 
         <div class="mt-4">
-          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
-          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+          <a href="professional_profile.html" class="btn btn-dark me-2">Professional Profile</a>
+          <a href="legal_publication.html" class="btn btn-outline-dark">Legal Publication</a>
         </div>
       </div>
 
@@ -185,8 +185,8 @@
     </div>
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
-      <a href="about.html" class="btn btn-dark">Professional Profile</a>
-      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+      <a href="professional_profile.html" class="btn btn-dark">Professional Profile</a>
+      <a href="legal_publication.html" class="btn btn-outline-dark">Legal Publication</a>
     </div>
 
     <small class="text-muted">
@@ -234,5 +234,6 @@
 
 </body>
 </html>
+
 
 
