Fix HTML encoding issues in legal_publication.html

--- a/legal_publication.html
+++ b/legal_publication.html
@@ -35,7 +35,7 @@
         </p>
         <div class="mt-4">
           <a href="index.html" class="btn btn-dark me-2">Home</a>
-          <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
+          <a href="professional_profile.html" class="btn btn-dark me-2">Professional Profile</a>
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
       <a href="index.html" class="btn btn-dark me-2">Home</a>
-      <a href="about.html" class="btn btn-dark me-2">Professional Profile</a>
+      <a href="professional_profile.html" class="btn btn-dark me-2">Professional Profile</a>
     </div>
 
     <small class="text-muted">
@@ -188,6 +188,7 @@
 </script>
 </body>
 </html>
+
 
 
 
