--- a/professional_profile.html
+++ b/professional_profile.html
@@ -35,7 +35,7 @@
         </p>
         <div class="mt-4">
           <a href="index.html" class="btn btn-dark me-2">Home</a>
-          <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+          <a href="legal_publication.html" class="btn btn-outline-dark">Legal Publication</a>
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
 
     <div class="mb-3 d-flex justify-content-center gap-2 flex-wrap">
       <a href="index.html" class="btn btn-dark">Home</a>
-      <a href="livro.html" class="btn btn-outline-dark">Legal Publication</a>
+      <a href="legal_publication.html" class="btn btn-outline-dark">Legal Publication</a>
     </div>
 
     <small class="text-muted">
@@ -179,6 +179,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
