Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,24 @@
   </div>
 </section>
 
+<section class="py-5 bg-light" id="contact">
+  <div class="container">
+    <h3 class="fw-bold text-center mb-4">Professional Contact</h3>
+
+    <!-- Contact Info -->
+    <div class="contact-info mb-4 text-center">
+      <p><i class="fas fa-envelope me-2"></i> ricardoadevmelo@gmail.com</p>
+      <p><i class="fas fa-phone me-2"></i> +353-83-056-9070</p>
+      <p><i class="fas fa-map-marker-alt me-2"></i> Cork, Ireland</p>
+    </div>
+
+    <!-- Contact Form -->
+    <form id="contact-form" method="POST">
+      <!-- campos do formulário -->
+    </form>
+  </div>
+</section>
+  
 <!-- CONTACT -->
 <section class="py-5" id="contact">
   <div class="container">
@@ -234,6 +252,7 @@
 
 </body>
 </html>
+
 
 
 
