--- a/professional_profile.html
+++ b/professional_profile.html
@@ -113,7 +113,7 @@
     <div class="row justify-content-center">
       <div class="col-md-10">
         <p>
-          Beyond law, I enjoy outdoor activities and sports that challenge me: weight training, rappelling, sandboarding, snowboarding, and surfing. I also love exploring new cultures, visiting historical sites, and traveling. My journey has taken me to Norway, Sweden, Scotland, and now Cork, Ireland.
+          Beyond law, I enjoy outdoor activities and sports that challenge me: weight training, sandboarding, snowboarding, and surfing. I also love exploring new cultures, visiting historical sites, and traveling. My journey has taken me to Norway, Sweden, Scotland, Portugal, and now Cork, Ireland.
         </p>
         <p>
           Whether pursuing professional challenges or exploring the world, I remain committed to learning, growth, and excellence in every endeavor.
@@ -179,6 +179,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
