--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
              style="max-width: 220px;">
       </div>
 
-      <div class="col-md-8">
-        <h1 class="fw-bold mb-2">Ricardo Melo</h1>
-        <h2 class="h5 text-muted mb-3">
-          Legal Assistant | Cork, Ireland
-        </h2>
+      <h1 class="fw-bold mb-1 text-start text-md-center">
+      Ricardo Melo
+      </h1>
+
+    <h2 class="h6 text-muted text-start text-md-center">
+      Legal Assistant | Cork, Ireland
+    </h2>
 
         <p class="lead">
           Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>,
@@ -131,7 +133,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
 
-        <h3 class="fw-bold text-center mb-2">Contact for Legal Assistant Opportunities</h3><br>
+        <h3 class="fw-bold text-center mb-3">Contact for Legal Assistant Opportunities</h3><br>
         <p class="text-center text-muted mb-4">
           Interested in hiring a highly skilled Legal Assistant with <strong>11+ years of judicial experience</strong> 
           and expertise in case management, court procedures, and legal documentation? 
@@ -252,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
