Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
              style="max-width: 220px;">
       </div>
 
-      <h1 class="fw-bold mb-1 text-start text-md-center">
-      Ricardo Melo
-      </h1>
+     <h1 class="fw-bold mb-2 text-center text-md-start">
+  Ricardo Melo
+</h1>
 
     <h2 class="h6 text-muted text-start text-md-center">
       Legal Assistant | Cork, Ireland
@@ -254,6 +254,7 @@
 
 </body>
 </html>
+
 
 
 
