--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
              style="max-width: 220px;">
       </div>
 
-     <h1 class="fw-bold mb-2 text-center text-md-start">
-  Ricardo Melo
-</h1>
+     <div class="col-md-8">
+  <h1 class="fw-bold mb-2">Ricardo Melo</h1>
 
     <h2 class="h6 text-muted text-start text-md-center">
       Legal Assistant | Cork, Ireland
@@ -254,6 +253,7 @@
 
 </body>
 </html>
+
 
 
 
