--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
      <div class="col-md-8">
   <h1 class="fw-bold mb-2">Ricardo Melo</h1>
 
-    <h2 class="h6 text-muted text-start text-md-center">
+    <h2 class="h6 text-muted text-start text-md-left">
       Legal Assistant | Cork, Ireland
     </h2>
 
@@ -253,6 +253,7 @@
 
 </body>
 </html>
+
 
 
 
