Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
              style="max-width: 220px;">
       </div>
 
-     <div class="col-md-8">
-  <h1 class="fw-bold mb-2">Ricardo Melo</h1>
+    <div class="col-md-8 text-center text-md-start">
+  <h1 class="fw-bold mb-2">
+    Ricardo Melo
+  </h1>
 
-    <h2 class="h6 text-muted text-start text-md-left">
-      Legal Assistant | Cork, Ireland
-    </h2>
+  <h2 class="h6 text-muted">
+    Legal Assistant | Cork, Ireland
+  </h2>
+</div>
+
 
         <p class="lead">
           Experienced Legal Assistant with over <strong>11 years of judicial experience</strong>,
@@ -253,6 +257,7 @@
 
 </body>
 </html>
+
 
 
 
